# cicero

./: .clang-format  .syntastic_c_config  CMakeLists.txt  README.md  asan_suppressions.txt
cmake/: CompilerWarnings.cmake
include/cicero/: cicero.h  mafsa.h
src/: cicero_tables.h  cicero_types.h  iconv.h  init.c  khash.h  kvec.h  legal.c  mafsa.c  mafsabuilder.c  movegen.c  rack.c  score.c
tests/: CMakeLists.txt  cgreen-first.c  legal_moves_test.c  mafsa_builder_test.c  run_tests.sh.in  tests.c  utils.h
tools/: run_clang_format.sh
